# GAN

./: .gitignore  Dockerfile  activations_show.py  cernal_show.py  cudnn_env_fix.txt  docker-compose.yml  generate_image.py  main.py  mypy.ini  plot_history.py  pyproject.toml  train.py
GAN/: activations_show.py
GAN/architectures/: self_attention_generator.py
GAN/configuration/: agrparser_init.py
GAN/models/: get_compiled_WGAN.py
GAN/utilites/: HistoryPlotting.py  KID.py
callbacks/: GANMonitor.py
configuration/: Config.py  agrparser_init.py
ganai/: __init__.py  claster.yml  config.yml  generate_image.py  main.py  plot_history.py  setup_worker.py  train.py  tune.py
ganai/architectures/: __init__.py  self_attention_discriminator.py  self_attention_generator.py
ganai/callbacks/: GANMonitor.py  __init__.py
ganai/configuration/: Config.py  __init__.py  agrparser_init.py
ganai/layers/: __init__.py  res_block.py  res_block_down.py  self_attention.py
ganai/losses/: __init__.py  discriminator_loss.py  generator_loss.py
ganai/models/: WGAN.py  __init__.py  get_compiled_WGAN.py
ganai/utilites/: __init__.py  config_loader.py  dataset_generator.py  dataset_load.py  images_plotter.py  layers.py
models/: WGAN.py  get_compiled_WGAN.py
src/: generate_image.py  main.py  plot_history.py  train.py
src/architectures/: self_attention_discriminator.py  self_attention_generator.py
src/models/: WGAN.py  get_compiled_WGAN.py
src/utilites/: HistoryPlotting.py  KID.py  layers.py  (+1 more)
utilites/: HistoryPlotting.py  dataset_generator.py  dataset_load.py  plot_image.py
