[tool.poetry]
name = "ganai"
version = "0.1.0"
description = ""
authors = ["Artem Bazyl <a4b11s@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
keract = "^4.5.1"
keras = "^3.3.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.7"
