[tool.poetry]
name = "ganai"
version = "0.1.0"
description = ""
authors = ["Artem Bazyl <a4b11s@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4"
pillow = "^10.3.0"
matplotlib = "^3.9.0"
tensorboard-plugin-profile = "^2.15.1"
tensorflow = {extras = ["and-cuda"], version = "^2.16.1"}
keras = "^3.3.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.7"
mkinit = "^1.1.0"

[tool.poetry.scripts]
start = "ganai.main:start"